turtleart.circleten.CircleTen.scala.error
Compilation error:
CircleTen:4: error: not found: value cirlce
  cirlce(radius);
  ^