turtleart.circleten.CircleTen.scala.code
var (x, y) = (getX(), getY());
var radius = 5.0;
for (i <- 0 to 9) {
  cirlce(radius);
  setPos(x, y);
  radius += 5.0;
}